- Fixed start & stop publishing dates not working
- Fixed Authorize.net failed transaction bug
- Removed pre-0.1 update code from runonce.php

Version 0.2.6 (2011-02-??)
------------------------------
- Added label for toggle button in product tree
- Added missing 'enabled' label to tl_iso_shipping_options (Ticket #373)
- Improved: Check isDefaultBilling/isDefaultShipping on first checkout
- Improved: Label for payment method is no longer mandatory (will use name if not set)
- Improved: Made text fields for meta description & meta keywords smaller (Ticket #386)
- Improved: Added javascript confirmation before deleting address (Ticket #328)
- Fixed ##newsletter.css## in HTML email
- Fixed issue with simple tokens in mail template subject
- Fixed issue with HTML in plain text emails
- Fixed CSS classes for new address fields in checkout module
- Fixed publish toggle not working for non-admins
- Fixed hardcoded labels in order history/details (Ticket #382)
- Fixed unlimited downloads only downloadable once (Ticket #383)
- Fixed filters overwriting each other (Ticket #363)
- Fixed issues with email messages (Ticket #391)
- Fixed: Address was not added to address book correctly
- Fixed: Downloads in PDF invoice caused fatal error
- Fixed: Product filter searched for field default value (Ticket #377)

Version 0.2.5 (2011-02-01)
------------------------------
- Added Isotope version constant to config file
- Improved: Use trigger_error() not "throw Exception" if no store configuration is available (Ticket #372)
- Fixed discount applied to subtotal on cart overrides other restrictions (Ticket #352)
- Fixed sql in edit-all mode on attributes
- Fixed ajax load spinning icon
- Fixed loading message font color
- Fixed text area floating in backend product edit mode
- Dropped unnessesary database fields
- Dropped unnecessary template ce_link_repeater.tpl
- Removed deprecated ups_developersKey

Version 0.2.4 (2011-01-17)
------------------------------